Updates to application